test/end-to-end/runnable/fun-closure-type-param.crow
import
	crow/io/print: out, print

main void() summon
	f = 1::nat getter
	out print "{f[]}"

getter[k] fun k()(k k) k data
	() => k
