test/end-to-end/compile-errors/destructure-non-tuple.crow
main void()
	(x, y) = 1::nat
	x,
